[package]
name = "demo1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi","libloaderapi","minwinbase","rpc","winnls","heapapi","winuser", "winnt", "memoryapi"] }
hex = "0.4"
uuid = "1.3.0"
rand_core = { version = "0.6", features = ["std"] }
cbc = "0.1.2"
aes = "0.8"
base64 = "0.21.0"