[package]
name = "BypassAv_demo2"
version = "0.1.0"
edition = "2021"
# build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

winapi = { version = "0.3.9", features = ["securitybaseapi","synchapi","memoryapi","tlhelp32","winnt", "libloaderapi", "winbase","winuser"] }
ntapi = "0.3.0"
hex = "0.4.3"
# windows = "0.44.0"

[dependencies.windows]
version = "0.44.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
cc = "1"


